add ConnectionFactory to  git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /Gerencia/nbproject/private/
 /Gerencia/build/
 /Gerencia/dist/
+/Gerencia/src/Model/ConnectionFactory/ConnectionFactory.java
 /testSwing/nbproject/private/
