--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /Gerencia/nbproject/private/
 /Gerencia/build/
 /Gerencia/dist/
-/Gerencia/src/Model/ConnectionFactory/ConnectionFactory.java
+/Gerencia/src/Model/ConnectionFactory/
 /testSwing/nbproject/private/
