--- a/Gerencia/nbproject/project.properties
+++ b/Gerencia/nbproject/project.properties
@@ -41,7 +41,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQL3.classpath}
+    ${libs.MySQL3.classpath}:\
+    ${libs.MySql.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
